# cauldron-backend

./: pyproject.toml
app/: config.py  main.py
app/api/: base.py
app/api/ressources/taxes/: crud.py  models.py  routes.py  schemas.py
app/database/: base.py
app/db/: crud.py  models.py  schemas.py  session.py
app/declaration/: helpers.py  model.py  routes.py
app/taxes_allocations/data/: tax_calculator_data_allocation_qc_single.csv
app/taxes_allocations/helpers/: input_functions.py  reader_functions.py
helper_functions/mortage/: mortageCalculator.py
helper_functions/taxes_allocations/data/: tax_calculator_data_allocation_canada.csv  tax_calculator_data_bpa.csv  tax_calculator_data_canada_tax.csv  tax_calculator_data_ei_preniums.csv  tax_calculator_data_qpp.csv  tax_calculator_data_wealthsimple.csv
helper_functions/taxes_allocations/helpers/: taxes_allocations.py  terminal_output.py
projet_chaudron/: notes.md
projet_chaudron/taxes_allocations/: input_functions.py  main.py  reader_functions.py
taxes_allocations/: input_functions.py  main.py  reader_functions.py  taxes_allocations.py  terminal_output.py
taxes_allocations/data/: tax_calculator_data_allocation_qc.csv  tax_calculator_data_qpip.csv  tax_calculator_data_quebec_tax.csv
