[tool.poetry]
name = "projet-chaudron"
version = "0.1.0"
description = ""
authors = ["David-Alexandre Guenette"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1.5.3"
numpy = "^1.24.2"
numpy-financial = "^1.0.0"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
orjson = "^3.8.7"
sqlalchemy = "^2.0.7"
psycopg2-binary = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
start = "app.main:start"